k8s/02_silverstripe_test_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silverstripe-test
  labels:
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: silverstripe-test
      tier: backend
  template:
    metadata:
      labels:
        app: silverstripe-test
        tier: backend
    spec:
      containers:
        - name: silverstripe-test
          image: gcr.io/…/silverstripe-test:latest
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 30
            httpGet:
              path: /healthz
              port: 80
