k8s/01_silverstripe_test_service.yml
apiVersion: v1
kind: Service
metadata:
  name: silverstripe-test
  labels:
    tier: backend
spec:
  type: NodePort
  selector:
    app: silverstripe-test
    tier: backend
  ports:
    - protocol: TCP
      port: 80
